--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "@angular/router": "^21.1.0",
     "@ng-bootstrap/ng-bootstrap": "^20.0.0",
     "@ng-select/ng-select": "^21.4.0",
+    "@types/uuid": "^10.0.0",
     "bootstrap": "^5.3.8",
     "d3": "^7.9.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@angular/build": "^21.1.2",
