--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/router": "^21.1.0",
     "@ng-bootstrap/ng-bootstrap": "^20.0.0",
     "@ng-select/ng-select": "^21.4.0",
+    "@ngrx/signals": "^21.0.1",
     "@types/uuid": "^10.0.0",
     "bootstrap": "^5.3.8",
     "d3": "^7.9.0",
