--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/uuid": "^10.0.0",
     "bootstrap": "^5.3.8",
     "d3": "^7.9.0",
+    "luxon": "^3.7.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^13.0.0"
@@ -44,6 +45,7 @@
     "@angular/cli": "^21.1.2",
     "@angular/compiler-cli": "^21.1.0",
     "@types/d3": "^7.4.3",
+    "@types/luxon": "^3.7.1",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
